--- a/POiG-Projekt.csproj
+++ b/POiG-Projekt.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.20" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
