Added icon and some UI

--- a/POiG-Projekt.csproj
+++ b/POiG-Projekt.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>POiG_Projekt</RootNamespace>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>ICON.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
